# cc-autobahn

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CODEX-INTEGRATION-ASSESSMENT.md  DATA-ENGINE.md  DECISIONS.md  DESIGN.md  ROADMAP.md
scripts/: appimage-prefer-system-webkit.sh  make-icon.mjs  make-permission-sounds.mjs  make-tray-icon-linux.mjs  make-tray-icon.mjs  release.mjs  screenshot-permission-gate.mjs  validate-linux-bundles.sh  visual-regression.mjs
scripts/fixtures/: provider-models.json
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: burn.rs  engine.rs  env_lock.rs  main.rs  path_state.rs  pathfix.rs  sensor.rs  tray.rs  tray_icon.rs  window.rs
src-tauri/src/burn/: mod.rs  parser.rs  tail.rs  zulu.rs
src-tauri/src/engine/: blocks.rs  history.rs  install.rs  mod.rs
src-tauri/src/permission/: always_allow.rs  codex_install.rs  hook_bin.rs  install.rs  mod.rs  transport.rs
src-tauri/src/providers/: claude.rs  diagnostics.rs  mod.rs
src-tauri/src/providers/codex/: app_server.rs  mod.rs  rollout.rs  scanner.rs
src-tauri/src/providers/codex/app_server/: mod.rs  normalize.rs  wire.rs
src-tauri/src/sensor/: install.rs  mod.rs  statusline_bin.rs
src-tauri/templates/: cc-autobahn.desktop  com.jmtrs.cc-autobahn.metainfo.xml
src/modules/: app-settings.js  app-settings.test.js  clock.js  cursor.js  display-mode.js  display-mode.test.js  engine-overlay.js  footer-metric.js  format.js  header-hint.js  history-data.js  history-data.test.js  history-page.js  ipc-events.js  ipc-events.test.js  keybindings.js  limits-page.js  mfd-nav.js  mfd-nav.test.js  mfd-settings.js  model-presentation.js  model-presentation.test.js  permission-consent.js  permission-consent.test.js  permission-gate.js  permission-gate.test.js  permission-sound.js  pin-button.js  provider-diagnostics.js  provider-diagnostics.test.js  provider-layout.js  provider-routing.js  provider-status.js  provider-status.test.js  provider-view.js  provider-view.test.js  provider-wiring.test.js  rate-limit-rendering.test.js  redline.js  redline.test.js  (+9 more)
