[package]
name = "cc-autobahn"
version = "0.1.0"
description = "Mercedes W203 amber trip-computer for Claude Code token usage"
authors = ["jmtrs"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
# macos-private-api: requerido por `macOSPrivateApi: true` en tauri.conf.json (D14).
tauri = { version = "2.11", features = ["macos-private-api"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
