[package]
name = "cc-autobahn"
version = "0.5.0"
description = "Mercedes W203 amber trip-computer for Claude Code token usage"
authors = ["jmtrs"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
# macos-private-api: required by `macOSPrivateApi: true` in tauri.conf.json (D14).
# tray-icon: menu-bar icon + anchored panel, replaces the floating window (D24).
# image-png: decodes the tray icon PNG at runtime (Image::from_bytes).
tauri = { version = "2.11", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Native rounded corners for the panel (D24 addendum): objc2-* are already
# transitive deps of tauri (macos-private-api) — here they're just exposed to
# our own code to clip the NSWindow (CALayer.cornerRadius). No third-party
# plugin or legacy cocoa/objc stack (D16 spirit: minimal, already compiled).
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSResponder"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
